--- a/ReadMe
+++ b/ReadMe
@@ -259,3 +259,5 @@ Module Installed: The dynamic feature module ("plants") gets downloaded and inst
 ServiceLoader Called (in Base Module): Your framework code, likely running in the base module (e.g., inside DFComponentViewModel.runServiceLoaderInitialization), calls ServiceLoader.load(). Crucially, the Context passed to ServiceLoader.load(..., context.classLoader) is typically the readily available ApplicationContext from the base module.
 Instance Created (by ServiceLoader): ServiceLoader scans the classpath (using the provided classloader which now includes the dynamic module), finds the META-INF/services/ file, reads the class name (com.kuru.featureflow.plant.PlantEntry), and uses reflection to load and instantiate PlantEntry. At this point, the PlantEntry object exists.
 initialize() Called (in Base Module): The framework code then iterates through the instances provided by ServiceLoader and calls entry.initialize().
+
+./gradlew :app:publishToMavenLocal
